<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_orange_background"
    android:padding="8dp"
    android:layout_margin="5dp"
    >

    <ImageView
        android:id="@+id/p_image"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:scaleType="fitCenter"
        android:minWidth="225dp"
        android:layout_weight="1"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">


            <TextView
                android:id="@+id/p_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/product_row_title" />

            <TextView
                android:id="@+id/p_brand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/product_row_brand" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/p_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/product_row_price" />

            <TextView
                android:id="@+id/p_discount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:textAlignment="viewEnd"
                android:text="@string/product_row_discount"
                android:textColor="#C62828" />
        </LinearLayout>

        <TextView
            android:id="@+id/p_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/product_row_long_product_description" />

    </LinearLayout>

</LinearLayout>