<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_orange_background"
    android:padding="8dp"
    android:layout_margin="5dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/user_image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/post_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/post_row_username"
        app:layout_constraintBottom_toBottomOf="@+id/user_image"
        app:layout_constraintStart_toEndOf="@id/user_image"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/like_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/like"
        app:layout_constraintBottom_toBottomOf="@id/user_image"
        app:layout_constraintEnd_toStartOf="@+id/like_text"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/like_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/post_row_like"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/user_image"
        app:layout_constraintEnd_toStartOf="@id/dislike_image"
        app:layout_constraintTop_toTopOf="parent" />
    <ImageView
        android:id="@+id/dislike_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/dislike"
        app:layout_constraintBottom_toBottomOf="@id/user_image"
        app:layout_constraintEnd_toStartOf="@+id/dislike_text"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/dislike_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/post_row_dislike"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/user_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/post_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/post_row_long_titile"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_margin="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_image" />

    <TextView
        android:id="@+id/post_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/post_row_very_long_post_descrption"
        android:textSize="14sp"
        android:layout_margin="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/post_title" />

</androidx.constraintlayout.widget.ConstraintLayout>